@@ -88,4 +88,10 @@
    type: instance
    namespace: root/interop
 #
+[CIM_IndicationService]
+   provider: ServerProvider
+   location: sfcInteropServerProvider
+   type: instance
+   namespace: root/interop
+#
 
