@@ -3,6 +3,9 @@
 	* getSchema.pre.in:
 	[ 2807245 ] Bump downloaded CIM schema to 2.21
 
+	* interopServerProvider.c, default.reg.in, interop.mof:
+	[ 2807405 ] Implement CIM_IndicationService
+	
 2009-06-11  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* httpAdapter.c:
